--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cached_network_image: ^3.3.0
   flutter_spinkit: ^5.2.0
   font_awesome_flutter: ^10.6.0
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
